home page changes

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,4 @@
+<link href='http://fonts.googleapis.com/css?family=Arizonia' rel='stylesheet' type='text/css'>
 <div id="grad">
     <header>
         <meta charset="utf-8">
@@ -9,9 +10,20 @@
       <br>
     <h1>Joshua Haxton</h1>
     <h3>Objective: As a computer science undergraduate, I hope to obtain an summer internship position in the Computer Science Field </h3>
+    <br>
     <div class="container">
-            <div class="about-me">            
-                My name is Joshua Haxton. I am currently an undergraduate Computer Science student at the University of Kansas from Jefferson City, MO. I am looking for a summer internship for 2021. I need to put a longer statement so i can take up more space alongside the picture that way it looks nicer
+            <div class="about-me">
+                <div class="bio">           
+                    My name is Joshua Haxton. I am currently an undergraduate Computer Science student at the University of Kansas from Jefferson City, MO. 
+                    I am looking for a summer internship for 2021. I have experience in many different programming languages and have worked as an application
+                    developer intern. I have been involved in many extra-cirricular activites while at KU. Through these activites, I have been able to further develop
+                    interpersonal skills and dabble in applications of Computer Science.  (I need to put a longer statement so i can take up more space alongside the picture that way it looks nicer)
+                    <br> <br> Thanks, <br> <br>
+                    <div class="signature">
+                        Joshua Haxton
+                    </div> <br> <br>
+                    Joshua Haxton
+                </div> 
             </div>
                 <img src="../assets/profilepic.jpg" class="pic"/>
     </div>
