--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -14,6 +14,8 @@ h1{
   margin-left: 300px;
   border-radius: 5px;
 }
+
+/*Objective*/
 h3{
     text-align: center;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -42,10 +44,18 @@ h3{
   font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-size: 20px;
   border: 2px solid rgb(11, 31, 121);
-  border-radius: 10%;
+  border-radius: 25px;
   margin-left: 5%;
   width: 53%;
   float: left;
+}
+.bio{
+  margin: 25px;
+}
+.signature{
+  font: 400 100px/1.3 'Arizonia', Helvetica, sans-serif;
+  color: #2b2b2b;
+  font-size: 50px;
 }
 
 /*Education Description Section*/
