Bio update and Name font change

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,13 +16,13 @@
                 <div class="bio">           
                     My name is Joshua Haxton. I am currently an undergraduate Computer Science student at the University of Kansas from Jefferson City, MO. 
                     I am looking for a summer internship for 2021. I have experience in many different programming languages and have worked as an application
-                    developer intern. I have been involved in many extra-cirricular activites while at KU. Through these activites, I have been able to further develop
-                    interpersonal skills and dabble in applications of Computer Science.  (I need to put a longer statement so i can take up more space alongside the picture that way it looks nicer)
-                    <br> <br> Thanks, <br> <br>
+                    developer intern last summer. I have been involved in many extra-cirricular activites while at KU. Through these activites, I have been able to further develop
+                    interpersonal skills and dabble in applications of Computer Science. Please feel free to contact me with any questions that you may have while looking
+                    at this site. (Add more so the bio is longer to match up better with the picture)
+                    <br> <br> Thanks, <br> <br> <br>
                     <div class="signature">
                         Joshua Haxton
-                    </div> <br> <br>
-                    Joshua Haxton
+                    </div>
                 </div> 
             </div>
                 <img src="../assets/profilepic.jpg" class="pic"/>
