--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -8,7 +8,8 @@
 h1{
   margin:0px; 
   text-align: center;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-weight: bold;
   color:rgb(11, 31, 121);
   margin-right: 300px;
   margin-left: 300px;
