--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,36 +6,32 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-      </header>
-      <br>
+    </header>
+    <br>
     <h1>Joshua Haxton</h1>
     <h3>Objective: As a computer science undergraduate, I hope to obtain an summer internship position in the Computer Science Field </h3>
     <br>
     <div class="container">
-            <div class="about-me">
-                <div class="bio">           
-                    My name is Joshua Haxton. I am currently an undergraduate Computer Science student at the University of Kansas from Jefferson City, MO. 
-                    I am looking for a summer internship for 2021. I have experience in many different programming languages and have worked as an application
-                    developer intern last summer. I have been involved in many extra-cirricular activites while at KU. Through these activites, I have been able to further develop
-                    interpersonal skills and dabble in applications of Computer Science. Please feel free to contact me with any questions that you may have while looking
-                    at this site. (Add more so the bio is longer to match up better with the picture)
-                    <br> <br> Thanks, <br> <br> <br>
-                    <div class="signature">
-                        Joshua Haxton
-                    </div>
-                </div> 
-            </div>
-                <img src="../assets/profilepic.jpg" class="pic"/>
+        <div class="about-me">
+            <div class="bio">           
+                My name is Joshua Haxton. I am currently an undergraduate Computer Science student at the University of Kansas from Jefferson City, MO. 
+                I am looking for a summer internship for 2021. I have experience in many different programming languages and have worked as an application
+                developer intern last summer. I have been involved in many extra-cirricular activites while at KU. Through these activites, I have been able to further develop
+                interpersonal skills and dabble in applications of Computer Science. Please feel free to contact me with any questions that you may have while looking
+                at this site. (Add more so the bio is longer to match up better with the picture)
+                <br> <br> Thanks, <br> <br> <br>
+                <div class="signature">
+                    Joshua Haxton
+                </div>
+            </div> 
+        </div>
+        <img src="../assets/profilepic.jpg" class="pic"/>
     </div>
     <div class= "education">
         <h2>Education</h2>
         <p class= "school"> University of Kansas</p>
-        <p class="degree"> Bachelor of Science in Computer Science<br> 
-            Minor in Economics
-        </p>
-        <p> GPA: 3.95<br>
-            Graduation: May 2022<br>
-        </p>
+        <p class="degree"> Bachelor of Science in Computer Science<br>Minor in Economics</p>
+        <p> GPA: 3.95<br>Graduation: May 2022<br></p>
     </div>
         <img src="../assets/lawrencecampus.jpg" class="campus"/>
         <br>
