--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -2,15 +2,6 @@
 #grad1{
     background-image: linear-gradient(to right, rgba(255,0,0,0), rgba(179, 205, 218));
 }
-.verticalStrip {
-  overflow: hidden;
-  position: fixed;
-  top: 0;
-  right: 0;
-  width: 50px;
-  background-color:rgb(28, 72, 138);
-  height:98.75%;
-}
 
 /*Header*/
 h1{
@@ -30,7 +21,7 @@ input[type=text], textarea {
   padding: 12px 20px;
   margin: 8px 0px;
   display: inline-block;
-  border: 1px solid #ccc;
+  border: 1px solid rgb(28, 72, 138);
   box-sizing: border-box;
 }
 div{
