--- a/src/app/professional/professional.component.html
+++ b/src/app/professional/professional.component.html
@@ -8,11 +8,29 @@
     </header>
     <br>
     <h1>Professional Experience</h1>
-    <h2>Information Technology Intern</h2>
-    <h3>Sun Life</h3>
-    <h4>Summer 2020</h4>
-    <h2>HackKU</h2>
-    <h3>University of Kansas</h3>
-    <h4>Spring 2020</h4>
+    <br>
+    <div class="container">
+        <h2>Information Technology/Application Developer Intern</h2>
+        <h3>Sun Life</h3>
+        <h4>Summer 2020</h4>
+        <p>Job Description</p>
+        <ul>
+            <li>Application Development using Angular framework as the frontend and Java as the backend</li>
+            <li>Communicated with team members using workplace chat and Zoom for direct communication, Jira board to assign tasks, and a BitBucket repository to transfer code</li>
+        </ul>
+        <br>
+        <hr>
+        <br>
+        <h2>HackKU</h2>
+        <h3>University of Kansas</h3>
+        <h4>Spring 2020</h4>
+        <p>Project:</p>
+        <ul>
+            <li>Frontend based project that was a financial oriented application that allowed a user to click on a location in the US and see information regarding that locations 
+                cost of living index, average temperature per month, and attractions</li>
+            <li>Worked with two other Computer Science students</li>
+            <li>Technologies used were Angular framework, TypeScript, HTML, and CSS</li>
+        </ul>
+    </div>
     <br>          
 </div>
