--- a/src/app/professional/professional.component.css
+++ b/src/app/professional/professional.component.css
@@ -14,6 +14,7 @@ h1{
 .container{
   margin-left:0% ;
   width: 100%;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 
 }
 
