Changed format of activities page

--- a/src/app/activites/activites.component.html
+++ b/src/app/activites/activites.component.html
@@ -1,13 +1,14 @@
 <div id="grad7">
-    <header>
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-    </header>
-    <br>
-    <h1>Activities</h1>
+  <header>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+  </header>
+  <br>
+  <h1>Activities</h1>
+  <div class="container">
     <h2>Jayhackers Information Security Club</h2>
     <h4>Communications Chair</h4>
     <h5>January 2020 - Present</h5>
@@ -21,6 +22,8 @@
       <li>???</li>
     </ul>
     <br>
+    <hr>
+    <br>
     <h2>Vann Fellowship</h2>
     <h5>Spring 2020</h5>
     <p>A fellowship inspired by KU alumnus Kyle D. Vann. The Vann Fellowship is a one semester extracurricular program for engineering students that wish to 
@@ -29,6 +32,8 @@
         <li>Third Place in Essay Competition</li>
       </ul>
     <br>
+    <hr>
+    <br>
     <h2>University of Kansas' Honors Program</h2>
     <h5>Fall 2018 - Present</h5>
     <ul>
@@ -36,4 +41,5 @@
       <li>Partook in advanced honors courses at the School of Engineering and the department of Mathematics which allowed me to develop a deeper understanding of coursework</li>
     </ul>
     <br>
+  </div>
 </div>   
