--- a/src/app/activites/activites.component.css
+++ b/src/app/activites/activites.component.css
@@ -9,3 +9,17 @@ h1{
     text-align:center;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
+
+/*Content*/
+.container{
+    margin-left:0% ;
+    width: 100%;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+hr{
+    width: 100%;
+    border: 0;
+    height: 2px;
+    background: rgb(11, 31, 121);
+    background-image: linear-gradient(to right, #ccc, rgb(11, 31, 121), #ccc);
+  }
