--- a/src/app/courses/courses.component.css
+++ b/src/app/courses/courses.component.css
@@ -36,6 +36,9 @@ td {
 tr:nth-child(even) {
   background-color: #f2f2f2;
 }
+tr:nth-child(odd) {
+  background-color: rgb(215, 234, 243);
+}
 
 /*Skills*/
 .container{
