--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -35,7 +35,7 @@ button {
   width: 10%;
   border: 2px solid black;
   color: white;
-  background-color: rgb(28, 72, 138);
+  background: linear-gradient(to right, rgb(28, 72, 138), rgb(215, 234, 243));
   padding: 10px;
   font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-size: 16px;
@@ -44,4 +44,5 @@ button {
 }
 button:hover {
   opacity: 0.8;
+  background: rgb(28, 72, 138);
 }
