--- a/src/app/courses/courses.component.css
+++ b/src/app/courses/courses.component.css
@@ -50,6 +50,7 @@ tr:nth-child(odd) {
   padding: 10px;
   padding-right: 20px;
   margin: 15px;
+  background-color: #f2f2f2;
 }
 h2{
   display:inline-block;
