--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,11 +16,11 @@
         <div class="about-me">
             <div class="bio">           
                 My name is Joshua Haxton. I am currently an undergraduate Computer Science student at the University of Kansas from Jefferson City, MO. 
-                I am looking for a summer internship for 2021. I have experience in many different programming languages and have worked as an application
-                developer intern last summer. I have been involved in many extra-cirricular activites while at KU. Through these activites, I have been able to further develop
-                interpersonal skills and dabble in applications of Computer Science. Please feel free to contact me with any questions that you may have while looking
-                at this site. (Add more so the bio is longer to match up better with the picture)
-                <br> <br> Thanks, <br> <br> <br>
+                I am looking for a summer internship for 2021. I have experience in many different programming languages and have worked as an Information Technology/Application
+                Developer Intern during the summer of 2020. I have been involved in many extra-cirricular activites while at KU. Through these activites, I have been able to further 
+                develop interpersonal skills and dabble in applications of Computer Science. I created this website to fully showcase who I am and the skills I could bring to table. 
+                Please feel free to contact me with any questions that you may have while looking at this site.
+                <br> <br> Thanks, <br> <br>
                 <div class="signature">
                     Joshua Haxton
                 </div>
