--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -33,6 +33,20 @@
         <p class="degree"> Bachelor of Science in Computer Science<br>Minor in Economics</p>
         <p> GPA: 3.95<br>Graduation: May 2022<br></p>
     </div>
-        <img src="../assets/lawrencecampus.jpg" class="campus"/>
-        <br>
+    <br>
+    <div class="container">
+        <div class="overlay1">
+            <img src="../assets/jeffersoncity.jpg" class="city"/>
+            <div class="jc">
+                <div>Jefferson City, MO</div>
+            </div>
+        </div>
+        <div class="overlay2">
+            <img src="../assets/lawrencecampus.jpg" class="campus"/>
+            <div class="lk">
+                <div>Lawrence, KS</div>
+            </div>
+        </div>
+    </div>
+    <br>
 </div>
